<resources>
    <string name="app_name">Clash Royale Guide version 7 </string>
    <string name="textView5">Загрузка...</string>
    <string name="button4">Воины </string>
    <string name="button9">Заклинания</string>
    <string name="button10">Здания</string>
    <string name="t1_name">Дракончик</string>
    <string name="t2_name">Бревно</string>
    <string name="t3_name">Башня-бомбежка</string>
    <string name="t4_name">Мегарыцарь</string>
    <string name="t5_name">Адская башня</string>
    <string name="t6_name">Огненный Шар</string>
    <string name="t7_name">Рыцарь</string>
    <string name="t8_name">Всадник на кабане</string>
    <string name="t2">Эпическая</string>
    <string name="t3">Редкая</string>
    <string name="t4">Обычная</string>
    <string name="t5">Легендарная</string>
    <string name="t6">Список карт:</string>
    <string name="t7">Дракон является отличным выбором для атаки или контроля больших групп вражеских войск и может быть эффективным оружием в вашей колоде. Однако он уязвим против стрелков и может стать целью для зданий, способных атаковать воздушные цели. Это важно учитывать при разработке вашей стратегии и возможных сочетаниях карт в битвах.</string>
    <string name="t8">
        Описание карты "Бревно":\n
        - Стоимость эликсира: 2\n
- Бревно  это своего рода лог, который сбрасывается на поле боя.\n
- Когда "Бревно" достигает земли на поле боя, оно наносит урон и сбивает с ног всех вражеских солдат, которые находятся на своем пути.\n
- Урон и эффект сбивания с ног зависят от уровня карты и ее прокачки.\n
- "Бревно" имеет некоторую ширину и охватывает определенную область.\n
- Она способна остановить множество различных карт, таких как низкую по силе армию, скоростные войска или воздушных солдат.\n
- К данной карте применяются карточные обновления для повышения ее силы и эффективности.
</string>
    <string name="t9">
      Описание карты "Башня-бомежка":\n
         - Стоимость эликсира: 4\n
- "Башня-бомежка" является оборонительной постройкой, которая атакует вражеские войска на поле боя.\n
- Когда вражеские солдаты подходят к "Башне-бомежке", она сбрасывает на них бомбы, наносящие им урон.\n
- Урон и радиус атаки зависят от уровня карты и ее прокачки.\n
- "Башня-бомежка" имеет определенное количество здоровья и может быть разрушена вражескими атаками.\n
- Она может атаковать как наземные, так и воздушные цели.\n
- К данной карте применяются карточные обновления для повышения ее силы и эффективности.

</string>
    <string name="t10">
      Описание карты "Мегарыцарь":\n
        - Стоимость эликсира: 7\n
- "Мегарыцарь" - это мощный и сильный воин, который является отличным выбором для атакующих тактик.\n
- Он обладает высоким уровнем здоровья и может наносить значительный урон вражеским войскам.\n
- "Мегарыцарь" способен атаковать как наземные, так и воздушные цели, делая его гибким игровым персонажем.\n
- Когда "Мегарыцарь" атакует, он выпрыгивает в воздух и затем совершает мощный приземлительный удар, который наносит урон всем врагам вблизи точки падения.\n
- Уровень урона и здоровья "Мегарыцаря" зависит от его уровня карты и ее прокачки.\n
- К данной карте применяются карточные обновления, которые повышают ее силу и эффективность.

</string>
    <string name="t11">
      Описание карты "Адская башня":\n
        - Стоимость эликсира: 5\n
- "Адская башня" является оборонительной постройкой, которая атакует вражеские войска на поле боя.\n
- Она использует мощный луч энергии для нанесения высокого урона вражеским солдатам.\n
- "Адская башня" способна атаковать только наземные цели.\n
- Она имеет очень высокий уровень здоровья и может выдерживать сильные атаки врагов.\n
- Уровень урона и здоровья "Адской башни" зависит от уровня карты и ее прокачки.\n
- Она имеет ограниченное поле обзора и атакует только врагов, находящихся внутри этого поля.\n
- К данной карте применяются карточные обновления для повышения ее силы и эффективности.

</string>
    <string name="t12">
    Описание карты "Огненный Шар":\n
        - Стоимость эликсира: 4\n
- "Огненный Шар" - это мощное огненное заклинание, которое применяется для нанесения урона вражеским солдатам и сооружениям.\n
- Карта требует 4 единицы эликсира для активации.\n
- "Огненный Шар" наносит урон всем вражеским картам, находящимся в указанной области эффекта заклинания.\n
- Урон "Огненного Шара" зависит от уровня карты и ее прокачки.\n
- Он также способен поджигать вражеских солдат, нанося им урон со временем.\n
- "Огненный Шар" имеет ограниченный радиус действия, и его точное размещение может быть важным для максимального урона.\n
- Карту можно использовать как для атаки, так и для защиты. Она эффективна против солдат с низким уровнем здоровья и оборонительных сооружений.

</string>
    <string name="t13">
    Описание карты "Рыцарь":\n
        - Стоимость эликсира: 3\n
- "Рыцарь" - это универсальный воин среднего уровня, обладающий сбалансированными характеристиками.\n
- У него средний уровень здоровья и способности атаковать как наземные, так и воздушные цели.\n
- "Рыцарь" имеет низкую стоимость эликсира, что делает его доступным и универсальным вариантом для вашего дека.\n
- Он способен справиться с слабыми вражескими солдатами и имеет хорошую выносливость.\n
- В сочетании с другими картами, "Рыцарь" может образовывать сильные комбинации атак.\n
- Уровень здоровья и урон "Рыцаря" зависит от его уровня карты и ее прокачки.\n
- К данной карте применяются карточные обновления, которые повышают ее силу и эффективность.


</string>
    <string name="t14">
   Карта "Всадник на кабане"\n
    -Эликсир: 4
        1. Уникальная способность "Быстрый старт": Одна из главных причин популярности этой карты - ее скорость.\n -Он мгновенно приходит в движение сразу после размещения на поле боя и сразу направляется к ближайшим зданиям противника. Это помогает "Всаднику на кабане" быстро достигать цели и наносить урон зданиям противника до того, как  они смогут атаковать или сконцентрироваться на его обороне.\n
         2. Атака на здания: "Всадник на кабане" специализируется на атаке зданий.\n Он не атакует войска или коронные башни, а направляет свою атаку только на здания. Это делает его особенно полезным для нанесения урона вашим оппонентам, разрушения их обороны и достижения победы.\n
Описание:
Всадник на кабане - это воин, который атакует только здания.\n Он прыгает через реки, преграды и даже другие воины, нанося урон зданию, которое является его целью.\n Однако, после уничтожения первой цели, он атакует любые ближайшие здания врага.

</string>
    <string name="hp1">Здоровье 1152</string>
    <string name="hp2">Здоровье 1356</string>
    <string name="hp3">Здоровье 3993</string>
    <string name="hp4">Здоровье 1749</string>
    <string name="hp5">Здоровье 1766</string>
    <string name="hp6">Здоровье 1696</string>
    <string name="damage1">урон 160</string>
    <string name="damage2">урон 290</string>
    <string name="damage3">урон 222</string>
    <string name="damage4">урон 268</string>
    <string name="damage5">урон 42</string>
    <string name="damage6">урон 689</string>
    <string name="damage7">урон 202</string>
    <string name="damage8">урон 318</string>
    <string name="Dmg_towHoll1">урон по башне 58</string>
    <string name="Dmg_towHoll2">урон по башне 207</string>
    <string name="speed_dmg1">Скорость атаки 1.5</string>
    <string name="speed_dmg2">Скорость атаки 1.8</string>
    <string name="speed_dmg3">Скорость атаки 1.7</string>
    <string name="speed_dmg4">Скорость атаки 0.4</string>
    <string name="speed_dmg5">Скорость атаки 1.2</string>
    <string name="speed_dmg6">Скорость атаки 1.6</string>
    <string name="dal_dmg1">Дальность атаки 3.5</string>
    <string name="dal1">дальность 6</string>
    <string name="speed4">Скорость Очень Быстрая</string>
    <string name="speed1">Скорость Быстрая</string>
    <string name="speed2">Скорость Средняя</string>
    <string name="speed3">Скорость Медленная</string>
    <string name="radiys1">Радиус заклинания 2.5</string>
    <string name="textView4">Clash Royale Guide - это справочник по игре Clash Royale который представляет собой описание карт и принцип их действия из игры \n \n Разработчик приложения: Морозов Илья</string>
    <string name="textView">"Clash Royale" - это стратегическая мобильная игра, разработанная и выпущенная компанией Supercell. В игре игроки собирают колоду из различных персонажей средневекового фэнтезийного мира и сражаются против других игроков в режиме реального времени. \n \n
        Суть игры заключается в том, чтобы размещать своих персонажей на арене и защищать свою башню, а также атаковать и уничтожать башни противника. Персонажи имеют различные способности, тактические возможности и характеристики, и игроки должны использовать их умело, чтобы выигрывать матчи. \n \n
        "Clash Royale" сочетает в себе элементы стратегии, коллекционирования и командной игры, что делает ее увлекательной и захватывающей для широкой аудитории игроков.
</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>