<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgr1"
    android:orientation="vertical"
    tools:context=".dragon">

    <TextView
        android:id="@+id/textViewAnim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="135dp"
        android:layout_marginTop="65dp"
        android:text="@string/t2"
        android:textColor="#BF26D2"
        android:textSize="16sp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="131dp">

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="93dp"
            android:layout_height="104dp"
            android:layout_marginHorizontal="20dp"
            android:padding="3dp"
            android:src="@drawable/drag2" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t1_name"
            android:textSize="34sp" />

    </TableRow>

    <TableLayout
        android:layout_width="401dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="71dp"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:src="@drawable/a1" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="41dp"
                android:layout_marginHorizontal="5sp"
                android:layout_marginTop="5dp"
                android:text="@string/hp1"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="46dp"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:src="@drawable/a2" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="41dp"
                android:layout_marginHorizontal="5sp"
                android:layout_marginTop="5dp"
                android:text="@string/damage1"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="96dp"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:src="@drawable/a4" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="41dp"
                android:layout_marginHorizontal="5sp"
                android:layout_marginTop="5dp"
                android:text="@string/speed_dmg1"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:src="@drawable/a9" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="41dp"
                android:layout_marginHorizontal="5sp"
                android:layout_marginTop="5dp"
                android:text="@string/dal_dmg1"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView15"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:src="@drawable/a5" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="41dp"
                android:layout_marginHorizontal="5sp"
                android:layout_marginTop="5dp"
                android:text="@string/speed1"
                android:textSize="20sp" />
        </TableRow>
    </TableLayout>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="63dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="280dp"
        android:layout_marginTop="680dp"
        android:adjustViewBounds="true"
        android:background="@drawable/button_back"
        android:contentDescription="назад"
        android:onClick="backfrag1"
        android:scaleType="fitXY"
        android:src="@drawable/but2" />

    <FrameLayout
        android:id="@+id/frame3"
        android:layout_width="348dp"
        android:layout_height="270dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="390dp">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/t7"
            android:textSize="20sp" />
    </FrameLayout>

</FrameLayout>