<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".firebow"
    android:background="@drawable/backgr1"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="350dp"
        android:layout_height="326dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="350dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/t12"
                android:textSize="20sp" />
        </ScrollView>

    </FrameLayout>

    <ImageButton
        android:id="@+id/imageButton9"
        android:layout_width="63dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="280dp"
        android:layout_marginTop="680dp"
        android:adjustViewBounds="true"
        android:background="@drawable/button_back"
        android:contentDescription="назад"
        android:onClick="backfrag1"
        android:scaleType="fitXY"
        android:src="@drawable/but2" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginTop="300dp">

        <ImageView
            android:id="@+id/imageView26"
            android:layout_width="79dp"
            android:layout_height="match_parent"
            android:padding="4dp"
            android:src="@drawable/a7" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="240dp"
            android:layout_height="39dp"
            android:layout_marginHorizontal="5sp"
            android:layout_marginTop="5dp"
            android:text="@string/radiys1"
            android:textSize="20sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginTop="250dp">

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="79dp"
            android:layout_height="match_parent"
            android:padding="4dp"
            android:src="@drawable/a6" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="204dp"
            android:layout_height="41dp"
            android:layout_marginHorizontal="5sp"
            android:layout_marginTop="5dp"
            android:text="@string/Dmg_towHoll2"
            android:textSize="20sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginTop="200dp">

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="79dp"
            android:layout_height="match_parent"
            android:padding="4dp"
            android:src="@drawable/a2" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="207dp"
            android:layout_height="38dp"
            android:layout_marginHorizontal="5sp"
            android:layout_marginTop="5dp"
            android:text="@string/damage6"
            android:textSize="20sp" />
    </TableRow>

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="135dp"
        android:layout_marginTop="65dp"
        android:text="@string/t3"
        android:textColor="#C16227"
        android:textSize="16sp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="168dp">

        <ImageView
            android:id="@+id/imageView25"
            android:layout_width="93dp"
            android:layout_height="104dp"
            android:layout_marginHorizontal="20dp"
            android:src="@drawable/firebow" />

        <TextView
            android:layout_width="278dp"
            android:layout_height="match_parent"
            android:text="@string/t6_name"
            android:textSize="34sp" />
    </TableRow>

</FrameLayout>