<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".brewno"
    android:background="@drawable/backgr1"
    android:orientation="vertical">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginTop="250dp">

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="79dp"
            android:layout_height="match_parent"
            android:padding="4dp"
            android:src="@drawable/a6" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="204dp"
            android:layout_height="41dp"
            android:layout_marginHorizontal="5sp"
            android:layout_marginTop="5dp"
            android:text="@string/Dmg_towHoll1"
            android:textSize="20sp" />
    </TableRow>

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="63dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="280dp"
        android:layout_marginTop="680dp"
        android:adjustViewBounds="true"
        android:background="@drawable/button_back"
        android:contentDescription="назад"
        android:onClick="backfrag1"
        android:scaleType="fitXY"
        android:src="@drawable/but2" />

    <TextView
        android:id="@+id/textViewAnim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="135dp"
        android:layout_marginTop="65dp"
        android:text="@string/t5"
        android:textColor="#DE84DF"

        android:textSize="16sp" />
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/imageView18"
            android:layout_width="93dp"
            android:layout_height="104dp"
            android:layout_marginHorizontal="20dp"
            android:padding="3dp"

            android:src="@drawable/brewno2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:text="@string/t2_name"
            android:textSize="34sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginTop="200dp">

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="79dp"
            android:layout_height="match_parent"
            android:padding="4dp"
            android:src="@drawable/a2" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="207dp"
            android:layout_height="38dp"
            android:layout_marginHorizontal="5sp"
            android:layout_marginTop="5dp"
            android:text="@string/damage2"
            android:textSize="20sp" />
    </TableRow>

    <FrameLayout
        android:layout_width="353dp"
        android:layout_height="356dp"
        android:layout_marginTop="320dp"
        android:layout_marginHorizontal="10dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/t8"
                android:textSize="20sp" />
        </ScrollView>

    </FrameLayout>

</FrameLayout>